[tool.poetry]
name = "tinker-rpi"
version = "0.1.0"
description = ""
authors = ["Sanjeev Shakya <sanjevsakya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"RPi.GPIO" = "^0.7.0"
gpiozero = "^1.5.1"

[tool.poetry.scripts]
tinker_rpi="tinker_rpi.main:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
